# ggseg_py

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: plotting_tutorials.ipynb
ggseg_py/: __init__.py  __version__.py  conversion_dicts.py  ggseg_py.py  plotting_utils.py
tests/: __init__.py  test_plotting.py
